# ormar-fastapi-adopting

./: main.py  pr.db  pyproject.toml
src/apps/: routers.py
src/apps/auth/: service.py
src/apps/board/: models.py  routers.py  schemas.py  service.py
src/apps/board/endpoint/: category.py  project.py  toolkit.py
src/config/: settings.py
src/tests/: test_proj.py
