[tool.poetry]
name = "fastapi-channels"
version = "0.1.0"
description = ""
authors = ["hyeseong <hyeseong43@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.66.1"
uvicorn = "^0.14.0"
databases = {extras = ["sqlite"], version = "^0.4.3"}
ormar = {extras = ["sqlite"], version = "^0.10.14"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
